tests/cli/snapshots/cli__fix__fix_apply_jsx_context.snap
---
source: tests/cli/fix.rs
info:
  program: glot
  args:
    - fix
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Inserted 1 comment(s) in 1 file(s) (processed 1 issue(s)).

----- stderr -----
