tests/cli/snapshots/cli__fix__fix_dry_run.snap
---
source: tests/cli/fix.rs
info:
  program: glot
  args:
    - fix
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
  --> ./src/app.tsx:7:18
     |
   7 |         <button>{t(`${prefix}.submit`)}</button>
     |                  ^
  +         {/* glot-message-keys "Common.*.submit" */}

Would insert 1 comment(s) in 1 file(s).
Run with --apply to insert these comments.

----- stderr -----
