tests/cli/snapshots/cli__fix__fix_jsx_attribute.snap
---
source: tests/cli/fix.rs
info:
  program: glot
  args:
    - fix
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:6:27
     |
   6 |     return <Button label={t(`${prefix}.label`)} />;
     |                           ^
   +     // glot-message-keys "Common.*.label"

Inserted 1 comment(s) in 1 file(s).

----- stderr -----
