tests/cli/snapshots/cli__fix__fix_multiple_same_file.snap
---
source: tests/cli/fix.rs
info:
  program: glot
  args:
    - fix
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Inserted 3 comment(s) in 1 file(s) (processed 3 issue(s)).

----- stderr -----
