tests/cli/snapshots/cli__fix__fix_multiple_same_line.snap
---
source: tests/cli/fix.rs
info:
  program: glot
  args:
    - fix
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Inserted 1 comment(s) in 1 file(s) (processed 2 issue(s)).

----- stderr -----
