tests/cli/snapshots/cli__fix__fix_no_dynamic_keys.snap
---
source: tests/cli/fix.rs
info:
  program: glot
  args:
    - fix
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ No dynamic keys found.

----- stderr -----
