tests/cli/snapshots/cli__fix__fix_single_line_jsx_return.snap
---
source: tests/cli/fix.rs
info:
  program: glot
  args:
    - fix
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:6:21
     |
   6 |     return <button>{t(`${prefix}.label`)}</button>;
     |                     ^
   +     // glot-message-keys "Common.*.label"

Inserted 1 comment(s) in 1 file(s).

----- stderr -----
